--- a/hotel.html
+++ b/hotel.html
@@ -18,7 +18,7 @@
     ;">
         <p class="numero me-4">(57)3124845800</p>
         <i class="fa-solid fa-location-dot"></i>
-        <p>San Andres, Colombia</p>
+        <p>San Andres, Colombia cambios hugo</p>
     </div>
     <div class="main container-fluid">
 
