--- a/hotel.html
+++ b/hotel.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-    <link rel="shortcut icon" href="/HOTEL/HOTEL BIT.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/HOTEL/logo web.svg" type="image/x-icon">
     <link rel="stylesheet" href="estilo.css">
 </head>
 
@@ -18,7 +18,7 @@
     ;">
         <p class="numero me-4">(57)3124845800</p>
         <i class="fa-solid fa-location-dot"></i>
-        <p>San Andres, Colombia cambios hugo</p>
+        <p>San Andres, Colombia</p>
     </div>
     <div class="main container-fluid">
 
