--- a/habitaciones.html
+++ b/habitaciones.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>Hotel BIT</title>
-  <link rel="stylesheet" href="css/mi.css">
+  <title>Habitaciones</title>
+  <link rel="stylesheet" href="css/habitaciones.css">
 
 
 </head>
@@ -61,7 +61,7 @@
 
     <div class="container mt-5 text-center">
       <div>
-        <span class="text text-black-50">
+        <span class="text text-black">
           <h1 class="hotel justify-content-center align-content-center">Habitaciones Hotel BIT</h1>
         </span>
       </div>
@@ -82,7 +82,7 @@
     </div>
 
     <div class="container mt-2 text-center">
-      <span class="text text-black-50 ">
+      <span class="text text-black">
         <h1 class="hotel justify-content-center align-content-center">¿Donde crearas tus sueños?</h1>
       </span>
     </div>
@@ -99,7 +99,7 @@
             </p>
             <p>Precio noche por persona $300.000</p>
             <div class="reservar">
-              <button type="button" class="btn btn-outline-info">Reservar</button>
+              <button type="button" class="btn btn-outline-info" src ><a href="http://127.0.0.1:5500/reservas.html">Reserva</a></button>
             </div>
             
           </div>
@@ -116,7 +116,7 @@
               el agua salada.</p>
             <p>Precio noche por persona $250.000</p>
             <div class="reservar">
-              <button type="button" class="btn btn-outline-info">Reservar</button>
+              <button type="button" class="btn btn-outline-info"  > <a href="http://127.0.0.1:5500/reservas.html">Reserva</a></button>
             </div>
           </div>
         </div>
@@ -134,7 +134,7 @@
               con pensamientos positivos.</p>
             <p>Precio noche por persona $210.000</p>
             <div class="reservar">
-              <button type="button" class="btn btn-outline-info">Reservar</button>
+              <button type="button" class="btn btn-outline-info"><a href="http://127.0.0.1:5500/reservas.html">Reserva</a></button>
             </div>
 
           </div>
@@ -148,7 +148,7 @@
             <p class="card-text">Si tienes gusto por estar en el agua en contacto visual con las coloridas especies marítimas, las habitaciones de la categoría mar cuentan con una malla de descanso ubicada en la playa y a la cual llegan las olas del mar, para que al estar en pleno descanso el agua te refresque con la fuerza de las olas, si deseas nadar hay una piscina natural con un extenso coral a pocos metros de la orilla, donde podrás visualizar diversas y coloridas especies de peces, como el pez cirujano azul, el pez dorado, el pez cebra, entre otros, en las habitaciones encontraras alimento para peces para que tengas la posibilidad de alimentar a los anfibios mientras nadas y le pones color a tus sueños, no esperes mas para interactuar con este mundo marino.</p>
             <p>Precio noche por persona $180.000</p>
             <div class="reservar">
-              <button type="button" class="btn btn-outline-info">Reservar</button>
+              <button type="button" class="btn btn-outline-info"><a href="http://127.0.0.1:5500/reservas.html">Reservar</a></button>
             </div>
           </div>
         </div>
