--- a/inicio.html
+++ b/inicio.html
@@ -9,12 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-<<<<<<< HEAD
-    <link rel="shortcut icon" href="img/LOGO HOTEL BIT.....png" type="image/x-icon">
-=======
-    <link rel="shortcut icon" href="/HOTEL/logo web.svg" type="image/x-icon">
->>>>>>> cc7cc8f67338895b49a81ff2d2ee8f03cfea04b5
+    <link rel="shortcut icon" href="img/LOGO HOTEL BIT.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo.css">
+
 </head>
 
 <body>
@@ -35,7 +32,7 @@
                             <a class="nav-link active " aria-current="page " href="# ">Inicio</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active " href="# ">Habitaciones</a>
+                            <a class="nav-link active " href="#">Habitaciones</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link active " href="# ">Reserva</a>
