--- a/nosotros.html
+++ b/nosotros.html
@@ -1,1 +1,172 @@
-!
+<!doctype html>
+<html lang="es">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Nosotros</title>
+    <link rel="stylesheet" href="css/nosotros.css">
+
+
+</head>
+
+<body>
+    <div class="titulo container">
+        <h1>Quienes somos </h1>
+        <p class="parrafo1">Hotel BIT FUE creado hace 5 años, nació como un emprendimiento de dos viajeros colombianos
+            enamorados de la diversidad de su país, después de realizar un recorrido por el sur, oriente, centro y
+            occidente de su país, Karla y Camilo decidieron emprender su viaje de vida por el sur de su tierra natal
+            Colombia, estando en Cartagena conocieron a la señora Petronila, una mujer de casi 60 años de edad, oriunda
+            de San Andrés, quien les manifestó que estaba vendiendo un terreno en la isla a muy buen precio ya que
+            estaba empezando a capitalizar su pensión, ellos negociaron un buen precio y decidieron partir al territorio
+            isleño para darle inicio a su emprendimiento, crear un hotel con la mejor experiencia posible de descanso,
+            conexión e inspiración en un territorio marítimo, a lo largo de estos años hotel Bit ha recibido más de
+            200.000 visitantes de más de 50 nacionalidades, quienes quedan impactados por las temáticas y vivencias
+            dentro las instalaciones, así de que esperamos tener tus pasos por nuestras instalaciones para seguir
+            escribiendo esta historia, entre playa, mar y atardeceres.</p>
+    </div>
+    <br>
+    <div class="clearfix container">
+        <img src="img/sandals-royal-jamaica-1506453092.jpg" class="col-md-6 float-md-end mb-3 ms-md-3 nosotros"
+            alt="...">
+
+        <h3>
+            ¿Que hacemos?
+        </h3>
+        <p>
+            A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding
+            quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
+        </p>
+        <h3>
+            Misión
+        </h3>
+        <p>
+            Brindar un servicio hotelero de excelencia, ofreciendo a nuestros huéspedes hospitalidad, mediante un trato
+            individualizado por un personal altamente motivado, lleno de viajes, experiencias de vida y talento,
+            buscando superar las expectativas de nuestros viajeros.
+        </p>
+    </div>
+    <br>
+    <br>
+    <div class="clearfix container">
+        <img src="img/sostenibilidad.jpg" class="col-md-6 float-md-start m-5 mb-3 ms-md-3 nosotrosx"
+            alt="...">
+
+            <h3>
+                Visión
+            </h3>
+            <p>
+                Convertirnos en un emprendimiento con sólido prestigio hotelero a nivel, nacional e internacional,
+                fomentando una sana e inspiradora experiencia resaltando el territoeio isleño y colombiano; ofreciendo
+                un servicio personalizado que permita una grata estadía de nuestros viajeros. Siempre comprometidos a
+                través de la mejora continua dentro de un marco de cultura, valores y hospitalidad Sanndresano.
+            </p>
+            <h3>
+                Sostenibilidad
+            </h3>
+            <p >
+                Utilizamos energías renovables es por eso que en nuestras instalaciones tenemos paneles solares, para el
+                abastecimiento de la energía de nuestras áreas sociales, las cuales después de las 9pm ya no estarán
+                iluminadas y libres de ruido para permitir un pleno descanso como fundamento de la recarga de energía de
+                nuestros viajeros, el agua que vertimos a al exterior pasa por 3 filtros de limpieza por pozo asépticos
+                con esto podamos expulsar el mínimo de desechos a nuestro territorio, así garantizar la conservación del
+                suelo y ambiente isleño, en nuestro restaurante empleamos materias primas orgánicas, cultivadas por
+                campesinos de nuestra isla, con esto generar una economía circular entre los habitantes de nuestro
+                territorio y otorgar una alimentación saludable a todos nuestros visitantes, un 2% de nuestras ventas
+                trimestrales van como aporte directo para la conservación y crecimiento de los corales de nuestra isla.
+            </p>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+
+</body>
+
+<footer class="text-center text-lg-start bg-light text-muted">
+
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <div class="me-5 d-none d-lg-block">
+            <span>Contactanos a través de nuestras redes:</span>
+        </div>
+
+        <div class="contacto d-flex">
+            <p>Siguenos :</p>
+            <a href="#" class="me-4 text-reset">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-google"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+    </section>
+
+    <section class="">
+        <div class="container text-center text-md-start mt-5">
+            <div class="row mt-3">
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        <i class="fas fa-gem me-3"></i>Hotel BIT
+                    </h6>
+                    <p>
+                        Hotel Bit como pagina preferida para realizar y cumplir todos tus viajes soñados.
+                    </p>
+                </div>
+
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Productos
+                    </h6>
+                    <p>
+                        <a href="#!" class="text-reset">Hoteles</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Reservas</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Habitaciones</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset"></a>
+                    </p>
+                </div>
+
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Contacto
+                    </h6>
+                    <p><i class="fas fa-home me-3"></i>Bogota, Colombia</p>
+                    <p>
+                        <i class="fas fa-envelope me-3"></i> hotelbit@info.com
+                    </p>
+                    <p><i class="fas fa-phone me-3"></i> +57 312 484 4508</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2022 Copyright: Hotel Bit
+    </div>
+</footer>
+
+</html>
