--- a/reservas.html
+++ b/reservas.html
@@ -2,42 +2,70 @@
 <html lang="es">
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/contactenos.css">
-    <title>Contactenos</title>
+    <link rel="stylesheet" href="css/reservas.css">
+    <title>Reservas</title>
 </head>
 
 <body>
+    <section class="container reserva">
 
-    </div>
-    <div class="con">
-        <h3>Contacto</h3>
-    </div>
-    <h3 class="formulario d-flex justify-content-center mt-3">Contacto</h3>
-    <div class="container d-flex justify-content-center align-items-center flex-column">
-        <form action="" class=" mt-3 w-50 ">
-            <input type="email" class="form-control" id="email" placeholder="Nombre">
-            <br>
-            <input type="email" class="form-control" id="email" placeholder="Email">
-            <br>
-            <input type="email" class="form-control" id="email" placeholder="Telefono">
-            <br>
-            <textarea class="form-control" id="mensaje" rows="3" placeholder="Mensaje"></textarea>
-            <br>
-            <button type="button" class="btn w-25 ">Enviar</button>
+        <form class="row g-3 ">
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Entrada:</label>
+                <input type="date" class="form-control" id="inputEmail4">
+            </div>
+
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Salida:</label>
+                <input type="date" class="form-control" id="inputPassword4">
+            </div>
+
+            <div class="col-md-3">
+                <label for="inputZip" class="form-label">Habitacion:</label>
+                <select name="Habitaciones" class="form-control" id="inputZip">
+                    <option value=""></option>
+                    <option value="">7 colores</option>
+                    <option value="">Atardecer</option>
+                    <option value="">Mar</option>
+                    <option value="">Playa</option>
+                </select>
+            </div>
+
+            <div class="col-md-3">
+                <label for="inputZipx" class="form-label">Personas:</label>
+                <select name="personas"  class="form-control" id="inputZipx">
+                    <option value=""></option>
+                    <option value="">1</option>
+                    <option value="">2</option>
+                    <option value="">3</option>
+                    <option value="">4</option>
+                </select>
+            </div>
+
+            <div class="col-md-6">
+                <label for="inputId" class="form-label">Codigo de descuento:</label>
+                <input type="text" class="form-control" id="inputId" placeholder="Numero de cedula">
+            </div>
+
+            <div class="col-12">
+                <button type="submit" class="btn">Enviar</button>
+            </div>
         </form>
-    </div>
+    </section>
 
 
-    <script src="js/code.js"></script>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 </body>
+
 <footer class="text-center text-lg-start bg-light text-muted">
 
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
