--- a/inicio.html
+++ b/inicio.html
@@ -9,36 +9,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-    <link rel="shortcut icon" href="img/LOGO HOTEL BIT.png" type="image/x-icon">
-    <link rel="stylesheet" href="estilo.css">
 
+    <link rel="shortcut icon" href="img/HOTEL BIT.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/inicio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
 </head>
 
 <body>
-    <div class="contacto container-fluid d-flex justify-content-center" style="background-color: #0000FF
+    <!--  <div class="contacto container-fluid d-flex justify-content-center" style="background-color: #73C2FB	
     ;">
-        <p class="numero me-4">(57)3124845800000</p>
+        <p class="numero me-4">(57)3124845800</p>
         <i class="fa-solid fa-location-dot"></i>
         <p>San Andres, Colombia</p>
-    </div>
+    </div> -->
     <div class="main container-fluid">
 
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light align-items-end" style="background-color: #225dba	;">
             <div class="container-fluid ">
-                <img class="logo " src="img/LOGO HOTEL BIT.....png" alt="FD ">
-                <div class="collapse navbar-collapse text-black " id="navbarNavDropdown ">
-                    <ul class="navbar-nav ">
+                <img class="logo hvr-bounce-in " src="/img/LOGO HOTEL BIT.png" alt="FD ">
+                <div class="collapse navbar-collapse text-decoration-underline" id="navbarNavDropdown">
+                    <ul class="navbar-nav me-4">
                         <li class="nav-item ">
-                            <a class="nav-link active " aria-current="page " href="# ">Inicio</a>
+                            <a class="nav-link active hvr-grow-shadow text-white" aria-current="page " href="# ">Inicio</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active " href="#">Habitaciones</a>
+                            <a class="nav-link active hvr-underline-from-center text-white  " href="# ">Habitaciones</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active " href="# ">Reserva</a>
+                            <a class="nav-link active hvr-underline-from-center text-white" href="# ">Reserva</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active " href="# ">Nosotros</a>
+                            <a class="nav-link active hvr-underline-from-center text-white" href="# ">Nosotros</a>
                         </li>
                     </ul>
                 </div>
@@ -49,50 +51,73 @@
         <div class="fondo mt-5 mb-5 d-flex justify-content-center align-items-end">
             <div class="centrar text-center mb-5 text-end">
                 <div class="caja align.align-items-end ">
-                    <h3 class="h3 text-black ">¡No esperes mas para disfrutar de la magia de San Andres!</h3>
-                    <button><a href="_blank " class="reservar text-decoration-none text-black ">Reservar</a></button>
-                    <button>Nosotros</button>
+                    <h3 class="h3 text-white ">¡No esperes mas para disfrutar de la magia de San Andres!</h3>
+                    <button type="button" class="btn btn-outline-info"><a href="_blank " class="btn text-decoration-none text-white">Reservar</a></button>
                 </div>
 
             </div>
         </div>
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <div class="row">
+            <div class="z col-2 promo_banner d-flex justify-content-center align-items-center hvr-float-shadow">
+                <!-- <div><img class="promo w-100" src="/img/descuento BIT.png" alt="descuento"></div> -->
+                <p class="text-center">
+                    Si eres estufiante de BIT recibiras un descuento del 15% al momento de realizar tu reserva, ingresadno el codigo: <br> <span class="code_promo">SOYBIT</span>
+                </p>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="/HOTEL/jony cay.jpg" class="d-block w-100" alt="Johny cay">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+            <div class="col-8">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="/HOTEL/acuario.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/img/Carrusel_1.jpeg" class="d-block w-100" alt="Johny cay">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/Carrusel_2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/Carrusel_3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/Carrusel_4.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="/HOTEL/piscina_natural.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="z col-2 promo_banner d-flex justify-content-center align-items-center hvr-float-shadow">
+                <!-- <div><img class="promo w-100" src="/img/descuento BIT.png" alt="descuento"></div> -->
+                <p class="text-center w-100">
+                    Regístrate en nuestro newsletter y recibe información de temas de intereses para viajeros en la isla de San Andrés y recibe un 10% para tu primera estadía en Hotel BIT <br> <span class="code_promo2">#MomentsBITSSAY</span>
+                </p>
+            </div>
         </div>
         <div>
             <hr>
@@ -101,48 +126,43 @@
         </div>
         <div class="card-group mb-5 ">
 
-            <div class="card ">
+            <div class="card hvr-shutter-in-vertical ">
                 <div class="d-flex justify-content-center align-items-center ">
-                    <img src="/HOTEL/img/map.png" class="card-img-top w-25 mt-2 " alt="Mapa">
+                    <img src="/img/Mapa.png" class="card-img-top w-25 mt-2 " alt="Mapa">
                 </div>
                 <div class="card-body ">
                     <h5 class="card-title text-decoration-underline ">Mapa</h5>
                     <p class="card-text ">Te estamos esperando, para crear la mejor experiencia en tus vacaciones, como llegar a toda la naturaleza que estas buscando para liberar tu mente y darle energía a tus sueños.
-                    </p>
-                    <p class="card-text "><small class="text-muted ">Last updated 3 mins ago</small></p>
                 </div>
             </div>
-            <div class="card ">
+            <div class="card hvr-shutter-in-vertical">
                 <div class="d-flex justify-content-center align-items-center ">
-                    <img src="/HOTEL/avion.png " class="card-img-top w-25 mt-3 " alt="avion ">
+                    <img src="/img/Avion.png" class="card-img-top w-25 mt-3 " alt="avion ">
                 </div>
                 <div class="card-body ">
                     <h5 class="card-title text-decoration-underline ">Atractivos turisticos</h5>
-                    <p class="card-text ">.
+                    <p class="card-text ">Podras encontrar los mejores planes para visitar los sitios turisticos de las isla como, Johny Cay, Psicina Natual, El Acuario y El Hoyo Solplador.
                     </p>
-                    <p class="card-text "><small class="text-muted ">Last updated 3 mins ago</small></p>
                 </div>
             </div>
-            <div class="card justify-content-center align-items-center ">
-                <img src="/HOTEL/payment-method.png " class="card-img-top w-25 mt-2 " alt="Pagos ">
+            <div class="card justify-content-center align-items-center hvr-shutter-in-vertical">
+                <img src="/img/Pagos.png" class="card-img-top w-25 mt-2 " alt="Pagos ">
                 <div class="card-body ">
                     <h5 class="card-title text-decoration-underline ">Metodos de pago</h5>
                     <p class="card-text ">Los metodos de pago son efectivo en pesos colombiano en sede principal. Tarjetas debito y credito.
-                    </p>
-                    <p class="card-text "><small class="text-muted ">Last updated 3 mins ago</small></p>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer class="text-center text-lg-start bg-light text-muted ">
+    <footer class="text-center text-lg-start bg-dark text-white text-muted ">
 
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom ">
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom  text-white">
             <div class="me-5 d-none d-lg-block ">
                 <span>Contactanos a través de nuestras redes:</span>
             </div>
 
-            <div class="contacto d-flex ">
+            <div class="contacto d-flex  ">
                 <p>Siguenos :</p>
                 <a href="# " class="me-4 text-reset ">
                     <i class="fab fa-facebook-f "></i>
@@ -165,8 +185,8 @@
             </div>
         </section>
 
-        <section class=" ">
-            <div class="container text-center text-md-start mt-5 ">
+        <section class="">
+            <div class="container text-center text-md-start mt-5 text-white ">
                 <div class="row mt-3 ">
                     <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 ">
                         <h6 class="text-uppercase fw-bold mb-4 ">
@@ -182,7 +202,7 @@
                             Productos
                         </h6>
                         <p>
-                            <a href="#! " class="text-reset ">Hoteles</a>
+                            <a href="#! " class="text-reset ">Hotel</a>
                         </p>
                         <p>
                             <a href="#! " class="text-reset ">Reservas</a>
