direccionamiento en reserva habitaciones

--- a/habitaciones.html
+++ b/habitaciones.html
@@ -91,7 +91,7 @@
           <p>Precio noche por persona $300.000</p>
           <div class="reservar">
             <button type="button" class="btn btn-outline-info" src><a
-                href="http://127.0.0.1:5500/reservas.html">Reserva</a></button>
+                href="reservas.html">Reserva</a></button>
           </div>
 
         </div>
@@ -109,7 +109,7 @@
           <p>Precio noche por persona $250.000</p>
           <div class="reservar">
             <button type="button" class="btn btn-outline-info"> <a
-                href="http://127.0.0.1:5500/reservas.html">Reserva</a></button>
+                href="reservas.html">Reserva</a></button>
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
           <p>Precio noche por persona $210.000</p>
           <div class="reservar">
             <button type="button" class="btn btn-outline-info"><a
-                href="http://127.0.0.1:5500/reservas.html">Reserva</a></button>
+                href="reservas.html">Reserva</a></button>
           </div>
 
         </div>
@@ -150,7 +150,7 @@
           <p>Precio noche por persona $180.000</p>
           <div class="reservar">
             <button type="button" class="btn btn-outline-info"><a
-                href="http://127.0.0.1:5500/reservas.html">Reservar</a></button>
+                href="reservas.html">Reservar</a></button>
           </div>
         </div>
       </div>
