--- a/inicio.html
+++ b/inicio.html
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse text-decoration-underline" id="navbarNavDropdown">
                     <ul class="navbar-nav me-4">
                         <li class="nav-item ">
-                            <a class="nav-link active hvr-grow-shadow text-white" aria-current="page " href="inicio.html">Inicio</a>
+                            <a class="nav-link active hvr-grow-shadow text-white" aria-current="page " git href="inicio.html">Inicio</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link active hvr-underline-from-center text-white  " href="habitaciones.html">Habitaciones</a>
@@ -54,7 +54,7 @@
             <div class="centrar text-center mb-5 text-end">
                 <div class="caja align.align-items-end ">
                     <h3 class="h3 text-white ">¡No esperes mas para disfrutar de la magia de San Andres!</h3>
-                    <button type="button" class="btn btn-outline-info"><a href="_blank "
+                    <button type="button" class="btn btn-outline-info"><a href="reservas.html"
                             class="btn text-decoration-none text-white">Reservar</a></button>
                 </div>
 
