--- a/nosotros.html
+++ b/nosotros.html
@@ -64,8 +64,7 @@
                 ¿Que hacemos?
             </h3>
             <p>
-                A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
-            </p>
+                Con nuestros espacios y experiencias, ayudamos a enfocar tus pensamientos, fortalecer tus sueños, aportar calma a un nuevo comienzo y crear nuevas inspiraciones en tu vida. </p>
             <h3>
                 Misión
             </h3>
