--- a/reservas.html
+++ b/reservas.html
@@ -22,13 +22,14 @@
         <p>San Andrés Isla, Colombia</p>
     </div>
     <div class="main container-fluid">
+
         <nav class="navbar navbar-expand-lg navbar-light align-items-end" style="background-color: #0f4396	;">
-            <div class="container-fluid ">
+            <div class="container-fluid collapse ">
                 <img class="logo hvr-bounce-in " src="/img/LOGO HOTEL BIT.png" alt="FD ">
                 <div class="collapse navbar-collapse text-decoration-underline" id="navbarNavDropdown">
                     <ul class="navbar-nav me-4">
                         <li class="nav-item ">
-                            <a class="nav-link active hvr-grow-shadow text-white" aria-current="page " href="inicio.html">Inicio</a>
+                            <a class="nav-link active hvr-grow-shadow text-white" aria-current="page " git href="inicio.html">Inicio</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link active hvr-underline-from-center text-white  " href="habitaciones.html">Habitaciones</a>
@@ -44,135 +45,135 @@
                 </div>
             </div>
         </nav>
-    </div>
-    <section class="container reserva">
+        <section class="container reserva">
 
-        <form class="row g-3 ">
-            <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Entrada:</label>
-                <input type="date" class="form-control" id="inputEmail4">
-            </div>
+            <form class="row g-3 ">
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="form-label">Entrada:</label>
+                    <input type="date" class="form-control" id="inputEmail4">
+                </div>
 
-            <div class="col-md-6">
-                <label for="inputPassword4" class="form-label">Salida:</label>
-                <input type="date" class="form-control" id="inputPassword4">
-            </div>
+                <div class="col-md-6">
+                    <label for="inputPassword4" class="form-label">Salida:</label>
+                    <input type="date" class="form-control" id="inputPassword4">
+                </div>
 
-            <div class="col-md-3">
-                <label for="inputZip" class="form-label">Habitacion:</label>
-                <select name="Habitaciones" class="form-control" id="inputZip">
+                <div class="col-md-3">
+                    <label for="inputZip" class="form-label">Habitacion:</label>
+                    <select name="Habitaciones" class="form-control" id="inputZip">
                     <option value=""></option>
                     <option value="">7 colores</option>
                     <option value="">Atardecer</option>
                     <option value="">Mar</option>
                     <option value="">Playa</option>
                 </select>
-            </div>
+                </div>
 
-            <div class="col-md-3">
-                <label for="inputZipx" class="form-label">Personas:</label>
-                <select name="personas" class="form-control" id="inputZipx">
+                <div class="col-md-3">
+                    <label for="inputZipx" class="form-label">Personas:</label>
+                    <select name="personas" class="form-control" id="inputZipx">
                     <option value=""></option>
                     <option value="">1</option>
                     <option value="">2</option>
                     <option value="">3</option>
                     <option value="">4</option>
                 </select>
-            </div>
+                </div>
 
-            <div class="col-md-6">
-                <label for="inputId" class="form-label">Codigo de descuento:</label>
-                <input type="text" class="form-control" id="inputId" placeholder="Numero de cedula">
-            </div>
+                <div class="col-md-6">
+                    <label for="inputId" class="form-label">Codigo de descuento:</label>
+                    <input type="text" class="form-control" id="inputId" placeholder="Numero de cedula">
+                </div>
 
-            <div class="col-12">
-                <button type="submit" class="btn">Enviar</button>
-            </div>
-        </form>
-    </section>
-
-    <footer class="text-center text-lg-start text-white text-muted " style="background-color: #0f4396;">
-
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom  text-white">
-            <div class="me-5 d-none d-lg-block ">
-                <span>Contactanos a través de nuestras redes:</span>
-            </div>
-
-            <div class="contacto d-flex  ">
-                <p>Siguenos :</p>
-                <a href="# " class="me-4 text-reset ">
-                    <i class="fab fa-facebook-f "></i>
-                </a>
-                <a href=" " class="me-4 text-reset ">
-                    <i class="fab fa-twitter "></i>
-                </a>
-                <a href=" " class="me-4 text-reset ">
-                    <i class="fab fa-google "></i>
-                </a>
-                <a href=" " class="me-4 text-reset ">
-                    <i class="fab fa-instagram "></i>
-                </a>
-                <a href=" " class="me-4 text-reset ">
-                    <i class="fab fa-linkedin "></i>
-                </a>
-                <a href=" " class="me-4 text-reset ">
-                    <i class="fab fa-github "></i>
-                </a>
-            </div>
+                <div class="col-12">
+                    <button type="button" class="btn" onclick="alerta2()">Enviar</button>
+                </div>
+            </form>
         </section>
 
-        <section class="">
-            <div class="container text-center text-md-start mt-5 text-white ">
-                <div class="row mt-3 ">
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 ">
-                        <h6 class="text-uppercase fw-bold mb-4 ">
-                            <i class="fas fa-gem me-3 "></i>Hotel BIT
-                        </h6>
-                        <p>
-                            Hotel Bit como pagina preferida para realizar y cumplir todos tus viajes soñados.
-                        </p>
-                    </div>
+        <footer class="text-center text-lg-start text-white text-muted" style="background-color: #0f4396;">
 
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 ">
-                        <h6 class="text-uppercase fw-bold mb-4 ">
-                            Productos
-                        </h6>
-                        <p>
-                            <a href="#! " class="text-reset ">Hotel</a>
-                        </p>
-                        <p>
-                            <a href="#! " class="text-reset ">Reservas</a>
-                        </p>
-                        <p>
-                            <a href="#! " class="text-reset ">Habitaciones</a>
-                        </p>
-                        <p>
-                            <a href="#! " class="text-reset "></a>
-                        </p>
-                    </div>
+            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom  text-white">
+                <div class="me-5 d-none d-lg-block ">
+                    <span>Contactanos a través de nuestras redes:</span>
+                </div>
 
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 ">
-                        <h6 class="text-uppercase fw-bold mb-4 ">
-                            Contacto
-                        </h6>
-                        <p><i class="fas fa-home me-3 "></i>San Andrés Isla, Colombia</p>
-                        <p>
-                            <i class="fas fa-envelope me-3 "></i> <a href="contactenos.html">Contactanos</a>
-                        </p>
-                        <p><i class="fas fa-phone me-3 "></i> +57 312 484 4508</p>
+                <div class="contacto d-flex  ">
+                    <p>Siguenos :</p>
+                    <a href="# " class="me-4 text-reset ">
+                        <i class="fab fa-facebook-f "></i>
+                    </a>
+                    <a href=" " class="me-4 text-reset ">
+                        <i class="fab fa-twitter "></i>
+                    </a>
+                    <a href=" " class="me-4 text-reset ">
+                        <i class="fab fa-google "></i>
+                    </a>
+                    <a href=" " class="me-4 text-reset ">
+                        <i class="fab fa-instagram "></i>
+                    </a>
+                    <a href=" " class="me-4 text-reset ">
+                        <i class="fab fa-linkedin "></i>
+                    </a>
+                    <a href=" " class="me-4 text-reset ">
+                        <i class="fab fa-github "></i>
+                    </a>
+                </div>
+            </section>
+
+            <section class="">
+                <div class="container text-center text-md-start mt-5 text-white ">
+                    <div class="row mt-3 ">
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 ">
+                            <h6 class="text-uppercase fw-bold mb-4 ">
+                                <i class="fas fa-gem me-3 "></i>Hotel BIT
+                            </h6>
+                            <p>
+                                Hotel Bit como pagina preferida para realizar y cumplir todos tus viajes soñados.
+                            </p>
+                        </div>
+
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 ">
+                            <h6 class="text-uppercase fw-bold mb-4 ">
+                                Productos
+                            </h6>
+                            <p>
+                                <a href="#! " class="text-reset ">Hotel</a>
+                            </p>
+                            <p>
+                                <a href="#! " class="text-reset ">Reservas</a>
+                            </p>
+                            <p>
+                                <a href="#! " class="text-reset ">Habitaciones</a>
+                            </p>
+                            <p>
+                                <a href="#! " class="text-reset "></a>
+                            </p>
+                        </div>
+
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 ">
+                            <h6 class="text-uppercase fw-bold mb-4 ">
+                                Contacto
+                            </h6>
+                            <p><i class="fas fa-home me-3 "></i>San Andrés Isla, Colombia</p>
+                            <p>
+                                <i class="fas fa-envelope me-3 "></i> <a href="contactenos.html">Contactanos</a>
+                            </p>
+                            <p><i class="fas fa-phone me-3 "></i> +57 312 484 4508</p>
+                        </div>
                     </div>
                 </div>
+            </section>
+
+            <div class="text-center p-4 " style="background-color: rgba(0, 0, 0, 0.05); ">
+                © 2022 Copyright: Hotel Bit
             </div>
-        </section>
-
-        <div class="text-center p-4 " style="background-color: rgba(0, 0, 0, 0.05); ">
-            © 2022 Copyright: Hotel Bit
-        </div>
-    </footer>
+        </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="/js/reserva.js"></script>
 </body>
 
 
