--- a/inicio.html
+++ b/inicio.html
@@ -24,7 +24,7 @@
     <div class="main container-fluid">
 
         <nav class="navbar navbar-expand-lg navbar-light align-items-end" style="background-color: #0f4396	;">
-            <div class="container-fluid ">
+            <div class="container-fluid collapse ">
                 <img class="logo hvr-bounce-in " src="/img/LOGO HOTEL BIT.png" alt="FD ">
                 <div class="collapse navbar-collapse text-decoration-underline" id="navbarNavDropdown">
                     <ul class="navbar-nav me-4">
@@ -74,31 +74,19 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="/img/Carrusel_1.jpeg" class="d-block w-100" alt="Johny cay">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
+
                         </div>
                         <div class="carousel-item">
                             <img src="/img/Carrusel_2.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
-                            </div>
+
                         </div>
                         <div class="carousel-item">
                             <img src="/img/Carrusel_3.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
-                            </div>
+
                         </div>
                         <div class="carousel-item">
                             <img src="/img/Carrusel_4.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
-                            </div>
+
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -111,11 +99,11 @@
                     </button>
                 </div>
             </div>
-            <div class="z col-2 promo_banner d-flex justify-content-center align-items-center hvr-float-shadow">
+            <div class="z col-2 promo_banner  d-flex flex-column justify-content-center align-items-center hvr-float-shadow">
                 <p class="text-center w-100">
                     Regístrate en nuestro newsletter y recibe información de temas de intereses para viajeros en la isla de San Andrés y recibe un 10% para tu primera estadía en Hotel BIT <br> <span class="code_promo2">#MomentsBITSSAY</span>
                 </p>
-                <button><a href=""></a></button>
+                <button class="susccribirse text-decoration-none" style="background-color: #0f4396;"><a class="text-decoration-none text-white" href="/contactenos.html">Suscribirse</a></button>
             </div>
         </div>
         <div>
@@ -130,7 +118,7 @@
                     <img src="/img/Mapa.png" class="card-img-top w-25 mt-2 " alt="Mapa">
                 </div>
                 <div class="card-body ">
-                    <h5 class="card-title text-decoration-underline ">Mapa</h5>
+                    <h5 class="card-title text-decoration-underline "><a href="https://goo.gl/maps/mcxs9Eqd8fXiWmFu6" class="h">Mapa</a></h5>
                     <p class="card-text ">Te estamos esperando, para crear la mejor experiencia en tus vacaciones, como llegar a toda la naturaleza que estas buscando para liberar tu mente y darle energía a tus sueños.
                 </div>
             </div>
@@ -139,7 +127,7 @@
                     <img src="/img/Avion.png" class="card-img-top w-25 mt-3 " alt="avion ">
                 </div>
                 <div class="card-body ">
-                    <h5 class="card-title text-decoration-underline ">Atractivos turisticos</h5>
+                    <h5 class="card-title text-decoration-underline"><a href="https://viajarviviendo.com/que-hacer-en-san-andres/" class="h">Atractivos turisticos</a></h5>
                     <p class="card-text ">Podras encontrar los mejores planes para visitar los sitios turisticos de las isla como, Johny Cay, Psicina Natual, El Acuario y El Hoyo Solplador.
                     </p>
                 </div>
@@ -147,7 +135,7 @@
             <div class="card justify-content-center align-items-center hvr-shutter-in-vertical">
                 <img src="/img/Pagos.png" class="card-img-top w-25 mt-2 " alt="Pagos ">
                 <div class="card-body ">
-                    <h5 class="card-title text-decoration-underline ">Metodos de pago</h5>
+                    <h5 class="card-title text-decoration-underline "><a href="https://www.ibero.edu.co/creditos-financiacion-para-estudiar/">Metodos de Pago</a></h5>
                     <p class="card-text ">Los metodos de pago son efectivo en pesos colombiano en sede principal. Tarjetas debito y credito.
                 </div>
             </div>
